migrate to SASS

--- a/src/card.tmpl
+++ b/src/card.tmpl
@@ -1,14 +1,14 @@
-<article class="project--card">
-  <h4 class="project--title"><a href="#href">#title</a></h4>
+<article class="project--card lang-#language">
+  <h4 class="project--card__title"><a href="#href">#title</a></h4>
 
-  <figure class="project--banner">
+  <figure class="lang-color project--card__banner">
     <img src="#logo" alt="Placeholder image" />
-    <figcaption class="project--title">#title</figcaption>
+    <figcaption class="project--card__title">#title</figcaption>
   </figure>
 
-  <p class="project--desc">#description</p>
+  <p class="project--card__desc">#description</p>
 
-  <div class="project--keywords">#keywords</div>
+  <div class="project--card__keywords">#keywords</div>
 
-  <footer class="project--link"><a href="#href">View Project</a></footer>
+  <footer class="project--card__link"><a href="#href">View Project</a></footer>
 </article>
