--- a/src/card.tmpl
+++ b/src/card.tmpl
@@ -1,13 +1,9 @@
-<article class="project--card lang-#language">
+<article class="project--card lang-#language-color">
   <h4 class="project--card__title"><a href="#href">#title</a></h4>
-
-  <figure class="lang-color project--card__banner">
-    <img src="#logo" alt="Placeholder image" />
-    <figcaption class="project--card__title">#title</figcaption>
-  </figure>
 
   <p class="project--card__desc">#description</p>
 
+  <div class="project--card__language">Language: #language</div>
   <div class="project--card__keywords">#keywords</div>
 
   <footer class="project--card__link"><a href="#href">View Project</a></footer>
