--- a/src/sass/_github-colors.scss
+++ b/src/sass/_github-colors.scss
@@ -1,33 +1,32 @@
-.lang-TypeScript .lang-color { background: #2b7489; }
-.lang-Shell .lang-color { background: #89e051; }
-.lang-RAML .lang-color { background: #77d9fb; }
-.lang-Elixir .lang-color { background: #6e4a7e; }
-.lang-Objective-C .lang-color { background: #438eff; }
-.lang-Oz .lang-color { background: #fab738; }
-.lang-Ruby .lang-color { background: #701516; }
-.lang-Brainfuck .lang-color { background: #2F2530; }
-.lang-Go .lang-color { background: #375eab; }
-.lang-Visual_Basic .lang-color { background: #945db7; }
-.lang-PHP .lang-color { background: #4F5D95; }
-.lang-Java .lang-color { background: #b07219; }
-.lang-Makefile .lang-color { background: #427819; }
-.lang-CoffeeScript .lang-color { background: #244776; }
-.lang-HTML .lang-color { background: #e44b23; }
-.lang-API_Blueprint .lang-color { background: #2ACCA8; }
-.lang-Swift .lang-color { background: #ffac45; }
-.lang-C .lang-color { background: #555555; }
-.lang-Rust .lang-color { background: #dea584; }
-.lang-Elm .lang-color { background: #60B5CC; }
-.lang-ASP .lang-color { background: #6a40fd; }
-.lang-C_Sharp .lang-color { background: #178600; }
-.lang-CSS .lang-color { background: #563d7c; }
-.lang-LOLCODE .lang-color { background: #cc9900; }
-.lang-FSharp .lang-color { background: #b845fc; }
-.lang-Puppet .lang-color { background: #302B6D; }
-.lang-JavaScript .lang-color { background: #f1e05a; }
-.lang-Erlang .lang-color { background: #B83998; }
-.lang-Python .lang-color { background: #3572A5; }
-.lang-Julia .lang-color { background: #a270ba; }
-.lang-Haskell .lang-color { background: #29b544; }
-.lang-Io .lang-color { background: #a9188d; }
-.lang-cpp .lang-color { background: #f34b7d; }
+.lang-TypeScript { border-top: 12px solid #2b7489; }
+.lang-Shell { border-top: 12px solid #89e051; }
+.lang-RAML { border-top: 12px solid #77d9fb; }
+.lang-Elixir { border-top: 12px solid #6e4a7e; }
+.lang-Objective-C { border-top: 12px solid #438eff; }
+.lang-Ruby { border-top: 12px solid #701516; }
+.lang-Brainfuck { border-top: 12px solid #2F2530; }
+.lang-Go { border-top: 12px solid #375eab; }
+.lang-Visual_Basic { border-top: 12px solid #945db7; }
+.lang-PHP { border-top: 12px solid #4F5D95; }
+.lang-Java { border-top: 12px solid #b07219; }
+.lang-Makefile { border-top: 12px solid #427819; }
+.lang-CoffeeScript { border-top: 12px solid #244776; }
+.lang-HTML { border-top: 12px solid #e44b23; }
+.lang-API_Blueprint { border-top: 12px solid #2ACCA8; }
+.lang-Swift { border-top: 12px solid #ffac45; }
+.lang-C { border-top: 12px solid #555555; }
+.lang-Rust { border-top: 12px solid #dea584; }
+.lang-Elm { border-top: 12px solid #60B5CC; }
+.lang-ASP { border-top: 12px solid #6a40fd; }
+.lang-CSharp { border-top: 12px solid #178600; }
+.lang-CSS { border-top: 12px solid #563d7c; }
+.lang-LOLCODE { border-top: 12px solid #cc9900; }
+.lang-FSharp { border-top: 12px solid #b845fc; }
+.lang-Puppet { border-top: 12px solid #302B6D; }
+.lang-JavaScript { border-top: 12px solid #f1e05a; }
+.lang-Erlang { border-top: 12px solid #B83998; }
+.lang-Python { border-top: 12px solid #3572A5; }
+.lang-Julia { border-top: 12px solid #a270ba; }
+.lang-Haskell { border-top: 12px solid #29b544; }
+.lang-Io { border-top: 12px solid #a9188d; }
+.lang-cpp { border-top: 12px solid #f34b7d; }
