update card format

--- a/src/card.tmpl
+++ b/src/card.tmpl
@@ -3,7 +3,7 @@
 
   <p class="project--card__desc">#description</p>
 
-  <div class="project--card__language">Language: #language</div>
+  <div class="project--card__language"><em>#language #type</em></div>
   <div class="project--card__keywords">#keywords</div>
 
   <footer class="project--card__link"><a href="#href">View Project</a></footer>
