add support for no flexbox layout (IE)

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -6,6 +6,16 @@ $QL_red:    #b4131b;
 $QL_purple: #561387;
 $QL_gray:   #444;
 
+$unit: 4ex;
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
