--- a/src/sass/_github-colors.scss
+++ b/src/sass/_github-colors.scss
@@ -1,32 +1,32 @@
-.lang-TypeScript { border-top: 12px solid #2b7489; }
-.lang-Shell { border-top: 12px solid #89e051; }
-.lang-RAML { border-top: 12px solid #77d9fb; }
-.lang-Elixir { border-top: 12px solid #6e4a7e; }
-.lang-Objective-C { border-top: 12px solid #438eff; }
-.lang-Ruby { border-top: 12px solid #701516; }
-.lang-Brainfuck { border-top: 12px solid #2F2530; }
-.lang-Go { border-top: 12px solid #375eab; }
-.lang-Visual_Basic { border-top: 12px solid #945db7; }
-.lang-PHP { border-top: 12px solid #4F5D95; }
-.lang-Java { border-top: 12px solid #b07219; }
-.lang-Makefile { border-top: 12px solid #427819; }
-.lang-CoffeeScript { border-top: 12px solid #244776; }
-.lang-HTML { border-top: 12px solid #e44b23; }
-.lang-API_Blueprint { border-top: 12px solid #2ACCA8; }
-.lang-Swift { border-top: 12px solid #ffac45; }
-.lang-C { border-top: 12px solid #555555; }
-.lang-Rust { border-top: 12px solid #dea584; }
-.lang-Elm { border-top: 12px solid #60B5CC; }
-.lang-ASP { border-top: 12px solid #6a40fd; }
-.lang-CSharp { border-top: 12px solid #178600; }
-.lang-CSS { border-top: 12px solid #563d7c; }
-.lang-LOLCODE { border-top: 12px solid #cc9900; }
-.lang-FSharp { border-top: 12px solid #b845fc; }
-.lang-Puppet { border-top: 12px solid #302B6D; }
-.lang-JavaScript { border-top: 12px solid #f1e05a; }
-.lang-Erlang { border-top: 12px solid #B83998; }
-.lang-Python { border-top: 12px solid #3572A5; }
-.lang-Julia { border-top: 12px solid #a270ba; }
-.lang-Haskell { border-top: 12px solid #29b544; }
-.lang-Io { border-top: 12px solid #a9188d; }
-.lang-cpp { border-top: 12px solid #f34b7d; }
+.lang-typescript { border-top: 12px solid #2B7489; }
+.lang-shell { border-top: 12px solid #89E051; }
+.lang-raml { border-top: 12px solid #77D9FB; }
+.lang-elixir { border-top: 12px solid #6E4A7E; }
+.lang-objective-c { border-top: 12px solid #438EFF; }
+.lang-ruby { border-top: 12px solid #701516; }
+.lang-brainfuck { border-top: 12px solid #2F2530; }
+.lang-go { border-top: 12px solid #375EAB; }
+.lang-visual_basic { border-top: 12px solid #945DB7; }
+.lang-php { border-top: 12px solid #4F5D95; }
+.lang-java { border-top: 12px solid #B07219; }
+.lang-makefile { border-top: 12px solid #427819; }
+.lang-coffeescript { border-top: 12px solid #244776; }
+.lang-html { border-top: 12px solid #E44B23; }
+.lang-api_blueprint { border-top: 12px solid #2ACCA8; }
+.lang-swift { border-top: 12px solid #FFAC45; }
+.lang-c { border-top: 12px solid #555555; }
+.lang-rust { border-top: 12px solid #DEA584; }
+.lang-elm { border-top: 12px solid #60B5CC; }
+.lang-asp { border-top: 12px solid #6A40FD; }
+.lang-csharp { border-top: 12px solid #178600; }
+.lang-css { border-top: 12px solid #563D7C; }
+.lang-lolcode { border-top: 12px solid #CC9900; }
+.lang-fsharp { border-top: 12px solid #B845FC; }
+.lang-puppet { border-top: 12px solid #302B6D; }
+.lang-javascript { border-top: 12px solid #F1E05A; }
+.lang-erlang { border-top: 12px solid #B83998; }
+.lang-python { border-top: 12px solid #3572A5; }
+.lang-julia { border-top: 12px solid #A270BA; }
+.lang-haskell { border-top: 12px solid #29B544; }
+.lang-io { border-top: 12px solid #A9188D; }
+.lang-cpp { border-top: 12px solid #F34B7D; }
