--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -115,7 +115,10 @@
 @mixin cardsBreakpoint($cardCount) {
   .flexbox-support {
     .project--card {
-      flex: 0 0 unquote("calc(100% / #{$cardCount} - #{$unit} / 2)");
+      flex-basis: unquote("calc(100% / #{$cardCount} - #{$unit} / 2)");
+      flex-grow: 0;
+      flex-shrink: 0;
+      // flex: 0 0 unquote("calc(100% / #{$cardCount} - #{$unit} / 2)");
     }
   }
 
