--- a/src/card.tmpl
+++ b/src/card.tmpl
@@ -1,10 +1,19 @@
-<article class="project--card lang-#language-color">
-  <h4 class="project--card__title"><a href="#href">#title</a></h4>
+<article class="c-ProjectCard" data-lang="#language-color">
+  <header class="c-ProjectCard__header">
+    <h3 class="b-Gamma">
+      <a class="c-ProjectCard__heading" href="#project">#title</a>
+    </h3>
+    <div class="c-ProjectCard__tags">
+      <span class="c-Tag">#language</span>
+      <span class="c-Tag">#type</span>
+    </div>
+  </header>
 
-  <p class="project--card__desc">#description</p>
+  <p class="c-ProjectCard__body">#description</p>
+  <p class="u-DisplayNone">#keywords</p>
 
-  <div class="project--card__language"><em>#language #type</em></div>
-  <div class="project--card__keywords">#keywords</div>
-
-  <footer class="project--card__link"><a href="#href">View Project</a></footer>
+  <footer class="c-ProjectCard__footer">
+    <a class="c-ProjectCard__button c-Button #displayNoneUtility" href="#projectURL">Project</a>
+    <a class="c-ProjectCard__button c-Button" href="#repoURL">Repo</a>
+  </footer>
 </article>
