--- a/src/sass/_base-typography.scss
+++ b/src/sass/_base-typography.scss
@@ -2,7 +2,8 @@
 // Typography
 // ==================================================================
 
-.b-Gamma {
-  line-height: 1.2em;
-  margin-bottom: .25em;
+.b-Heading--headline {
+  line-height: 1.1;
+  text-align: center;
+  margin-bottom: 1em;
 }
