--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -53,6 +53,8 @@
 @import "components-filter";
 @import "components-projectcard";
 
+@import "theme-global";
+
 //
 // Utilities (Overrides and helpers)
 ///
