--- a/src/sass/_base-global.scss
+++ b/src/sass/_base-global.scss
@@ -8,10 +8,13 @@ html {
 
 body {
   padding: .75em .75em 0;
-  background: linear-gradient($white 0em, $white 22em, $grey-light 22em, $grey-light);
+
+  @media all and (min-width: 36.3125em) {
+    background: linear-gradient($white 0em, $white 29em, $grey-light 29em, $grey-light);
+  }
 
   @media all and (min-width: 54.5em) {
-    background: linear-gradient($white 0em, $white 25.25em, $grey-light 25.25em, $grey-light);
+    background: linear-gradient($white 0em, $white 32em, $grey-light 32em, $grey-light);
   }
 }
 
