--- a/src/sass/_components-projectcard.scss
+++ b/src/sass/_components-projectcard.scss
@@ -8,6 +8,10 @@
   padding: 1.5em 1em 1em;
   background-color: $white;
   box-shadow: 0px 0px 5px 1px rgba(0,0,0,.1);
+
+  // if no grid support center the cards and limit width
+  margin: 0 auto;
+  max-width: 32em;
 }
 
 .c-ProjectCard__header {
