--- a/src/sass/_utilities-utilities.scss
+++ b/src/sass/_utilities-utilities.scss
@@ -5,3 +5,20 @@
 .u-DisplayNone {
   display: none !important;
 }
+
+.u-VisuallyHidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.u-CenterBlock {
+  margin: 0 auto;
+}
+
+.u-TextAlign--center {
+  text-align: center !important;
+}
